--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -49,6 +49,13 @@
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
         <!--        -->
+
+        <!--        eureka client       -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <!--        -->
     </dependencies>
 
 </project>
