--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -55,6 +55,13 @@
         </dependency>
         <!--		-->
 
+
+        <!--        eureka client       -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <!--        -->
     </dependencies>
 
 </project>
