adding dependies - security - oauth2.0 resource server(keycloak)
configurations for security by resource server

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -37,6 +37,14 @@ spring:
           predicates:
             - Path= /eureka/**
 
+  # for keycloak as resource server
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8050/realms/SpringBoot-Microservices
+
+
 
 eureka:
   instance:
