securing discovery server with id and password

--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -8,3 +8,7 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+
+# credentials
+  username: eureka
+  password: password
