circuit breaker:- 1. adding dependencies -> actuator for health check, circuitbreaker-resilience4j for circuitbreaker and resilience4j-reactor if using webflux in project
2. adding configuraitons for health checker by actuator and resilience4j circuitbreaker

3. adding circuit breaker to method

--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -43,7 +43,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!--        web flux-->
+        <!--        web flux        -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
@@ -56,6 +56,25 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <!--        -->
+
+        <!--    dependencies for circuit breaker    -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.github.resilience4j/resilience4j-reactor -->
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-reactor</artifactId>
+        </dependency>
+        <!--        -->
+
     </dependencies>
 
 </project>
