--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -61,3 +61,9 @@ resilience4j:
     instances:
       inventory-service:
         timeoutDuration: 3s
+
+  retry:
+    instances:
+      inventory-service:
+        maxAttempts: 3
+        waitDuration: 5s
