--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -37,12 +37,21 @@ spring:
           predicates:
             - Path= /eureka/**
 
+
   # for keycloak as resource server
   security:
     oauth2:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:8050/realms/SpringBoot-Microservices
+
+
+  # services tracing using zipkin
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
 
 
 
@@ -64,3 +73,5 @@ logging:
           gateway:
             route:
               RouteDefinitionRouteLocator: INFO
+
+
