--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -12,3 +12,12 @@ eureka:
 # credentials
   username: eureka
   password: password
+
+
+# services tracing using zipkin
+spring:
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
