--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -10,6 +10,16 @@ spring:
       uri: mongodb://localhost:27017
       database: msproject_product_ms
 
+
+  # services tracing using zipkin
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1.0
+
+
+
 eureka:
   instance:
     prefer-ip-address: true
