making order service as producer using kafka

--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -88,6 +88,13 @@
         </dependency>
         <!--        -->
 
+        <!--    KAFKA    -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <!--        -->
+
     </dependencies>
 
 </project>
